--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -12,7 +12,7 @@ blake2-rfc = { version = "0.2.18", default-features = false }
 codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
 currencies = { version = "0.4", package = "orml-currencies", default-features = false }
 derive_more = { version = "0.99.11", default-features = false }
-fixnum = { version = "0.5", default-features = false, features = ["i128", "parity"] }
+fixnum = { version = "0.6", default-features = false, features = ["i128", "parity", "serde"] }
 frame-support = { version = "3", default-features = false }
 frame-system = { version = "3", default-features = false }
 libsecp256k1 = { version = "0.3.5", features = ['hmac'], default-features = false }
@@ -43,7 +43,6 @@ std = [
     'num-traits/std',
     'frame-support/std',
     'frame-system/std',
-    'fixnum/serde',
     'fixnum/std',
     'sp-core/std',
     'sp-runtime/std',
