--- a/pallets/demeter-farming-platform/Cargo.toml
+++ b/pallets/demeter-farming-platform/Cargo.toml
@@ -12,6 +12,7 @@ edition = "2018"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
+ceres-liquidity-locker = { path = "../ceres-liquidity-locker", default-features = false }
 codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
 frame-benchmarking = { version = "3", default-features = false, optional = true }
 frame-support = { version = "3", default-features = false }
@@ -22,9 +23,7 @@ sp-core = { version = "3", default-features = false }
 sp-runtime = { version = "3", default-features = false }
 sp-std = { version = "3", default-features = false }
 serde = { version = "1.0.101", optional = true, features = ["derive"], default-features = false }
-pool-xyk = { path = "../pool-xyk", default-features = false }
 pswap-distribution = { path = "../pswap-distribution", default-features = false }
-vested-rewards = { path = "../vested-rewards", default-features = false }
 trading-pair = { path = "../trading-pair", default-features = false }
 technical = { path = "../technical" , default-features = false}
 hex-literal = "0.3.1"
@@ -33,15 +32,18 @@ hex-literal = "0.3.1"
 assets = { path = "../assets" }
 common = { path = "../../common", features = ["test"] }
 ceres-liquidity-locker = { path = "../ceres-liquidity-locker", default-features = false }
+demeter-farming-platform = { path = ".", default-features = false }
 currencies = { version = "0.4", package = "orml-currencies", default-features = false }
 sp-io = { version = "3", default-features = false }
 tokens = { version = "0.4", package = "orml-tokens", default-features = false }
 pallet-balances = { version = "3" }
 permissions = { path = "../permissions" }
 technical = { path = "../technical", default-features = false }
+pool-xyk = { path = "../pool-xyk", default-features = false }
 pswap-distribution = { path = "../pswap-distribution" }
 multicollateral-bonding-curve-pool = { path = "../multicollateral-bonding-curve-pool", default-features = false }
 dex-manager = { path = "../dex-manager", default-features = false }
+vested-rewards = { path = "../vested-rewards", default-features = false }
 
 [features]
 default = ["std"]
