--- a/pallets/liquidity-proxy/benchmarking/Cargo.toml
+++ b/pallets/liquidity-proxy/benchmarking/Cargo.toml
@@ -34,6 +34,7 @@ dex-api = { path = "../../dex-api", default-features = false}
 
 [dev-dependencies]
 ceres-liquidity-locker = { path = "../../ceres-liquidity-locker", default-features = false }
+demeter-farming-platform = { path = "../../demeter-farming-platform", default-features = false }
 currencies = { version = "0.4", package = "orml-currencies", default-features = false }
 pallet-balances = { version = "3", default-features = false }
 serde = { version = "1.0.101", default-features = false, features = ["derive"] }
