--- a/pallets/ceres-governance-platform/Cargo.toml
+++ b/pallets/ceres-governance-platform/Cargo.toml
@@ -31,6 +31,7 @@ frame-benchmarking = { version = "3", default-features = false, optional = true 
 assets = { path = "../assets" }
 common = { path = "../../common", features = ["test"] }
 ceres-liquidity-locker = { path = "../ceres-liquidity-locker", default-features = false }
+demeter-farming-platform = { path = "../demeter-farming-platform", default-features = false }
 currencies = { version = "0.4", package = "orml-currencies", default-features = false }
 dex-manager = { path = "../dex-manager", default-features = false }
 ceres-governance-platform = { path = ".", default-features = false }
