--- a/pallets/ceres-launchpad/Cargo.toml
+++ b/pallets/ceres-launchpad/Cargo.toml
@@ -34,6 +34,7 @@ hex-literal = "0.3.1"
 assets = { path = "../assets" }
 common = { path = "../../common", features = ["test"] }
 currencies = { version = "0.4", package = "orml-currencies", default-features = false }
+demeter-farming-platform = { path = "../demeter-farming-platform", default-features = false }
 sp-io = { version = "3", default-features = false }
 tokens = { version = "0.4", package = "orml-tokens", default-features = false }
 pallet-balances = { version = "3" }
