--- a/pallets/ceres-liquidity-locker/Cargo.toml
+++ b/pallets/ceres-liquidity-locker/Cargo.toml
@@ -30,6 +30,7 @@ hex-literal = "0.3.1"
 assets = { path = "../assets" }
 common = { path = "../../common", features = ["test"] }
 currencies = { version = "0.4", package = "orml-currencies", default-features = false }
+demeter-farming-platform = { path = "../demeter-farming-platform", default-features = false}
 dex-manager = { path = "../dex-manager", default-features = false }
 ceres-liquidity-locker = { path = ".", default-features = false }
 pallet-balances = { version = "3", default-features = false }
