--- a/pallets/ceres-token-locker/Cargo.toml
+++ b/pallets/ceres-token-locker/Cargo.toml
@@ -30,6 +30,7 @@ assets = { path = "../assets" }
 ceres-liquidity-locker = { path = "../ceres-liquidity-locker", default-features = false }
 common = { path = "../../common", features = ["test"] }
 currencies = { version = "0.4", package = "orml-currencies", default-features = false }
+demeter-farming-platform = { path = "../demeter-farming-platform", default-features = false }
 dex-manager = { path = "../dex-manager", default-features = false }
 pallet-balances = { version = "3", default-features = false }
 pool-xyk = { path = "../pool-xyk" }
