--- a/pallets/farming/Cargo.toml
+++ b/pallets/farming/Cargo.toml
@@ -40,6 +40,7 @@ rustc-hex = { version = "2.1.0", default-features = false }
 [dev-dependencies]
 ceres-liquidity-locker = { path = "../ceres-liquidity-locker", default-features = false }
 currencies = { version = "0.4", package = "orml-currencies" }
+demeter-farming-platform = { path = "../demeter-farming-platform", default-features = false }
 env_logger = "0.9.0"
 hex-literal = { version = "0.3.1" }
 log = "0.4.14"
