--- a/pallets/pool-xyk/Cargo.toml
+++ b/pallets/pool-xyk/Cargo.toml
@@ -27,6 +27,7 @@ sp-std = { version = "3", default-features = false }
 assets = { path = "../assets", default-features = false }
 ceres-liquidity-locker = { path = "../ceres-liquidity-locker", default-features = false }
 common = { path = "../../common", default-features = false }
+demeter-farming-platform = { path = "../demeter-farming-platform", default-features = false }
 dex-manager = { path = "../dex-manager", default-features = false }
 permissions = { path = "../permissions", default-features = false }
 technical = { path = "../technical", default-features = false }
