--- a/pallets/price-tools/Cargo.toml
+++ b/pallets/price-tools/Cargo.toml
@@ -37,6 +37,7 @@ technical = { path = "../technical", default-features = false }
 
 [dev-dependencies]
 ceres-liquidity-locker = { path = "../ceres-liquidity-locker", default-features = false }
+demeter-farming-platform = { path = "../demeter-farming-platform", default-features = false }
 hex-literal = "0.3.1"
 pallet-balances = { version = "3", default-features = false }
 common = { path = "../../common", features = ["test"] }
