--- a/pallets/xst/Cargo.toml
+++ b/pallets/xst/Cargo.toml
@@ -35,6 +35,7 @@ pool-xyk = { path = "../pool-xyk", default-features = false }
 
 [dev-dependencies]
 ceres-liquidity-locker = { path = "../ceres-liquidity-locker", default-features = false }
+demeter-farming-platform = { path = "../demeter-farming-platform", default-features = false }
 hex-literal = "0.3.1"
 pallet-balances = { version = "3", default-features = false }
 sp-core = { version = "3", default-features = false }
