--- a/pallets/vested-rewards/Cargo.toml
+++ b/pallets/vested-rewards/Cargo.toml
@@ -19,11 +19,12 @@ dex-manager = { path = "../dex-manager", default-features = false }
 frame-benchmarking = { version = "3", default-features = false, optional = true }
 frame-support = { version = "3", default-features = false }
 frame-system = { version = "3", default-features = false }
+hex = { version = "0.4", default-features = false, features = ["serde"] }
 hex-literal = "0.3"
 multicollateral-bonding-curve-pool = { path = "../multicollateral-bonding-curve-pool", default-features = false }
 serde = { version = "1.0", features = ["derive"], default-features = false }
-serde_json = { version = "1.0", default-features = false }
 serde_bytes = { version = "0.11", default-features = false, features = ["alloc"] }
+serde_json = { version = "1.0", default-features = false }
 sp-core = { version = "3", default-features = false }
 sp-io = { version = "3", default-features = false }
 sp-runtime = { version = "3", default-features = false }
@@ -52,10 +53,11 @@ std = [
     'currencies/std',
     'frame-support/std',
     'frame-system/std',
+    'hex/std',
     'multicollateral-bonding-curve-pool/std',
+    'serde/std',
     'serde_bytes/std',
     'serde_json/std',
-    'serde/std',
     'sp-core/std',
     'sp-io/std',
     'sp-runtime/std',
