--- a/relayer/substrate-gen/Cargo.toml
+++ b/relayer/substrate-gen/Cargo.toml
@@ -21,3 +21,4 @@ codec = { package = "parity-scale-codec", version = "2", features = ["derive"] }
 scale-info = { version = "1.0.0", features = ["derive"] }
 bridge-types = { path = "../../pallets/trustless-eth-bridge/types" }
 beefy-primitives = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.14" }
+serde = { version = "1.0.131", features = ["derive"] }
