--- a/pallets/pswap-distribution/benchmarking/Cargo.toml
+++ b/pallets/pswap-distribution/benchmarking/Cargo.toml
@@ -36,6 +36,7 @@ trading-pair = { path = "../../trading-pair", default-features = false }
 [dev-dependencies]
 ceres-liquidity-locker = { path = "../../ceres-liquidity-locker", default-features = false }
 currencies = { version = "0.4", package = "orml-currencies" }
+demeter-farming-platform = { path = "../../demeter-farming-platform", default-features = false }
 hex-literal = { version = '0.3.1' }
 pallet-balances = { version = "3" }
 serde = { version = "1.0.101", features = ["derive"] }
