--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -31,6 +31,7 @@ ceres-liquidity-locker-benchmarking = { path = "../pallets/ceres-liquidity-locke
 ceres-token-locker = { path = "../pallets/ceres-token-locker", default-features = false }
 ceres-staking = { path = "../pallets/ceres-staking", default-features = false }
 demeter-farming-platform = { path = "../pallets/demeter-farming-platform", default-features = false }
+demeter-farming-platform-benchmarking = { path = "../pallets/demeter-farming-platform/benchmarking", default-features = false, optional = true }
 dex-api = { path = "../pallets/dex-api", default-features = false }
 dex-api-benchmarking = { path = "../pallets/dex-api/benchmarking", default-features = false, optional = true }
 dex-manager = { path = "../pallets/dex-manager", default-features = false }
@@ -214,7 +215,7 @@ runtime-benchmarks = [
     "ceres-governance-platform/runtime-benchmarks",
     "ceres-launchpad/runtime-benchmarks",
     "ceres-liquidity-locker-benchmarking",
-    "demeter-farming-platform/runtime-benchmarks",
+    "demeter-farming-platform-benchmarking",
     "dex-api-benchmarking",
     "ceres-staking/runtime-benchmarks",
     "ceres-token-locker/runtime-benchmarks",
