--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -40,6 +40,7 @@ assets-rpc = { path = "../pallets/assets/rpc" }
 liquidity-proxy-rpc = { path = "../pallets/liquidity-proxy/rpc" }
 eth-bridge-rpc = { path = "../pallets/eth-bridge/rpc" }
 pswap-distribution-rpc = { path = "../pallets/pswap-distribution/rpc" }
+vested-rewards-rpc = { path = "../pallets/vested-rewards/rpc" }
 
 # Parachain dependencies
 framenode-runtime = { path = "../runtime" }
