--- a/pallets/rewards/Cargo.toml
+++ b/pallets/rewards/Cargo.toml
@@ -16,14 +16,16 @@ codec = { package = "parity-scale-codec", version = "2", default-features = fals
 frame-benchmarking = { version = "3", default-features = false, optional = true }
 frame-support = { version = "3", default-features = false }
 frame-system = { version = "3", default-features = false }
+hex = { version = "0.4", default-features = false }
 hex-literal = { version = "0.3.1", default-features = false }
 libsecp256k1 = { version = "0.3.5", features = ["hmac"], default-features = false }
-serde = { version = "1.0.101", optional = true, features = ["derive"] }
+orml-traits = { version = "0.4", package = "orml-traits", default-features = false }
+serde = { version = "1.0", optional = true, features = ["derive"] }
+serde_json = { version = "1.0", default-features = false }
 sp-core = { version = "3", default-features = false }
 sp-io = { version = "3", default-features = false }
-sp-std = { version = "3", default-features = false }
 sp-runtime = { version = "3", default-features = false }
-orml-traits = { version = "0.4", package = "orml-traits", default-features = false }
+sp-std = { version = "3", default-features = false }
 
 assets = { path = "../assets", default-features = false }
 common = { path = "../../common", default-features = false }
@@ -47,6 +49,8 @@ std = [
     'frame-support/std',
     'frame-system/std',
     'serde',
+    'serde/std',
+    'serde_json/std',
     'sp-core/std',
     'sp-io/std',
     'sp-std/std',
