--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -9,27 +9,35 @@ edition = "2021"
 
 [dependencies]
 blake2-rfc = { version = "0.2.18", default-features = false }
-codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
-scale-info = { version = "1.0.0", default-features = false, features = [
+codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
     "derive",
 ] }
+scale-info = { version = "2", default-features = false, features = ["derive"] }
 currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-currencies", default-features = false }
 # derive_more = { version = "0.99.17", default-features = false }
-fixnum = { git = "https://github.com/vovac12/fixnum", branch = "master", default-features = false, features = ["i128", "parity", "scale-info"] }
-frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
-frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
-secp256k1 = { version = "0.7", features = ['hmac'], default-features = false, package = "libsecp256k1" }
+fixnum = { git = "https://github.com/vovac12/fixnum", branch = "polkadot-v0.9.19", default-features = false, features = [
+    "i128",
+    "parity",
+    "scale-info",
+] }
+frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }
+frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }
+secp256k1 = { version = "0.7", features = [
+    'hmac',
+], default-features = false, package = "libsecp256k1" }
 num-traits = { version = "0.2.12", default-features = false }
 orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-traits", default-features = false }
 paste = "1.0.0"
 rustc-hex = { version = "2.1.0", default-features = false }
-serde = { version = "1.0", features = ["derive"], optional = true, default-features = false }
+serde = { version = "1.0", features = [
+    "derive",
+], optional = true, default-features = false }
 smallvec = "1.7.0"
-sp-arithmetic = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
-sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
-sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
-sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
-sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
+sp-arithmetic = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }
+sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }
+sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }
+sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }
+sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }
 static_assertions = "1.1.0"
 
 [dev-dependencies]
