--- a/primitives/ethereum/Cargo.toml
+++ b/primitives/ethereum/Cargo.toml
@@ -5,14 +5,15 @@ authors = ["Snowfork <contact@snowfork.com>"]
 edition = "2021"
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [
+codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
 	"derive",
 ] }
-scale-info = { version = "1.0.0", default-features = false, features = [
-    "derive",
+scale-info = { version = "2", default-features = false, features = ["derive"] }
+ethbloom = { version = "0.12.1", default-features = false, features = [
+	"rlp",
+	"codec",
 ] }
-ethbloom = { version = "0.11.0", default-features = false }
-ethereum-types = { version = "0.12.1", default-features = false, features = [
+ethereum-types = { version = "0.13.1", default-features = false, features = [
 	"codec",
 	"rlp",
 	"serialize",
@@ -26,13 +27,16 @@ serde = { version = "1.0.101", optional = true }
 serde-big-array = { version = "0.2", optional = true }
 getrandom = { version = "0.2.1", features = ["js"] }
 
-sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
-sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
-sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
-sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
+sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }
+sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }
+sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }
+sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }
 
-ethabi = { git = "https://github.com/snowfork/ethabi-decode.git", branch = "master", package = "ethabi-decode", default-features = false }
-ethash = { git = "https://github.com/snowfork/ethash.git", branch = "master", default-features = false }
+ethabi = { version = "17.0.0", default-features = false, features = [
+	"rlp",
+	"parity-codec",
+] }
+ethash = { git = "https://github.com/rust-ethereum/ethash", rev = "43876fd11acf6680e2965e13ae6db7f3a55cf24f", default-features = false }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.19"
@@ -48,9 +52,8 @@ std = [
 	"serde",
 	"serde-big-array",
 	"codec/std",
-    "scale-info/std",
+	"scale-info/std",
 	"ethabi/std",
-	"ethash/std",
 	"ethbloom/std",
 	"ethereum-types/std",
 	"hex/std",
