Add crowdloan lease period info RPC

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -208,7 +208,8 @@ std = [
 
 private-net = [
     "faucet",
-    "farming/private-net"
+    "farming/private-net",
+    "vested-rewards/private-net"
 ]
 
 runtime-benchmarks = [
