Change block_number to timestamp logic in ceres-liquidity-locker pallet

--- a/pallets/ceres-governance-platform/Cargo.toml
+++ b/pallets/ceres-governance-platform/Cargo.toml
@@ -26,6 +26,7 @@ permissions = { path = "../permissions", default-features = false }
 serde = { version = "1.0.101", optional = true, features = ["derive"] }
 hex-literal = "0.3.1"
 frame-benchmarking = { version = "3", default-features = false, optional = true }
+pallet-timestamp = { version = "3", default-features = false }
 
 [dev-dependencies]
 assets = { path = "../assets" }
