--- a/pallets/ceres-liquidity-locker/Cargo.toml
+++ b/pallets/ceres-liquidity-locker/Cargo.toml
@@ -22,6 +22,7 @@ sp-runtime = { version = "3", default-features = false }
 sp-std = { version = "3", default-features = false }
 technical = { path = "../technical", default-features = false }
 trading-pair = { path = "../trading-pair", default-features = false }
+pallet-timestamp = { version = "3", default-features = false }
 permissions = { path = "../permissions", default-features = false }
 serde = { version = "1.0.101", optional = true, features = ["derive"] }
 hex-literal = "0.3.1"
@@ -56,5 +57,6 @@ std = [
     "sp-core/std",
     "sp-runtime/std",
     "sp-std/std",
+    "pallet-timestamp/std"
 ]
 
