--- a/pallets/demeter-farming-platform/Cargo.toml
+++ b/pallets/demeter-farming-platform/Cargo.toml
@@ -26,6 +26,7 @@ serde = { version = "1.0.101", optional = true, features = ["derive"], default-f
 pswap-distribution = { path = "../pswap-distribution", default-features = false }
 trading-pair = { path = "../trading-pair", default-features = false }
 technical = { path = "../technical" , default-features = false}
+pallet-timestamp = { version = "3", default-features = false }
 hex-literal = "0.3.1"
 
 [dev-dependencies]
