--- a/pallets/demeter-farming-platform/benchmarking/Cargo.toml
+++ b/pallets/demeter-farming-platform/benchmarking/Cargo.toml
@@ -31,6 +31,7 @@ dex-manager = { path = "../../dex-manager", default-features = false }
 vested-rewards = { path = "../../vested-rewards", default-features = false }
 trading-pair = { path = "../../trading-pair", default-features = false }
 technical = { path = "../../technical" , default-features = false}
+pallet-timestamp = { version = "3", default-features = false }
 hex-literal = "0.3.1"
 
 [dev-dependencies]
