--- a/pallets/liquidity-proxy/benchmarking/Cargo.toml
+++ b/pallets/liquidity-proxy/benchmarking/Cargo.toml
@@ -15,6 +15,7 @@ codec = { package = "parity-scale-codec", version = "2", default-features = fals
 frame-benchmarking = { version = "3", default-features = false }
 frame-support = { version = "3", default-features = false }
 frame-system = { version = "3", default-features = false }
+pallet-timestamp = { version = "3", default-features = false }
 hex-literal = "0.3.1"
 sp-runtime = { version = "3", default-features = false }
 sp-std = { version = "3", default-features = false }
