--- a/pallets/pool-xyk/Cargo.toml
+++ b/pallets/pool-xyk/Cargo.toml
@@ -23,6 +23,7 @@ serde = { version = "1.0.101", optional = true, features = ["derive"], default-f
 sp-core = { version = "3", default-features = false }
 sp-runtime = { version = "3", default-features = false }
 sp-std = { version = "3", default-features = false }
+pallet-timestamp = { version = "3", default-features = false }
 
 assets = { path = "../assets", default-features = false }
 ceres-liquidity-locker = { path = "../ceres-liquidity-locker", default-features = false }
