--- a/pallets/pool-xyk/benchmarking/Cargo.toml
+++ b/pallets/pool-xyk/benchmarking/Cargo.toml
@@ -24,6 +24,7 @@ technical = { path = "../../technical", default-features = false }
 trading-pair = { path = "../../trading-pair", default-features = false }
 permissions = { path = "../../permissions", default-features = false }
 pswap-distribution = { path = "../../pswap-distribution", default-features = false }
+pallet-timestamp = { version = "3", default-features = false }
 hex-literal = "0.3.1"
 
 [dev-dependencies]
