--- a/pallets/xst/Cargo.toml
+++ b/pallets/xst/Cargo.toml
@@ -32,6 +32,7 @@ pswap-distribution = { path = "../pswap-distribution", default-features = false 
 technical = { path = "../technical", default-features = false }
 trading-pair = { path = "../trading-pair", default-features = false }
 pool-xyk = { path = "../pool-xyk", default-features = false }
+pallet-timestamp = { version = "3", default-features = false }
 
 [dev-dependencies]
 ceres-liquidity-locker = { path = "../ceres-liquidity-locker", default-features = false }
