--- a/Cargo.toml
+++ b/Cargo.toml
@@ -450,6 +450,8 @@ members = [
     "pallets/trustless-eth-bridge/eth-app",
     "pallets/trustless-eth-bridge/erc20-app",
     "pallets/trustless-eth-bridge/leaf-provider",
+    "pallets/trustless-eth-bridge/leaf-provider/runtime-api",
+    "pallets/trustless-eth-bridge/leaf-provider/rpc",
     "pallets/trustless-eth-bridge/types",
     "relayer",
     "relayer/substrate-gen",
