--- a/utils/generate-bags/Cargo.toml
+++ b/utils/generate-bags/Cargo.toml
@@ -18,4 +18,4 @@ chrono = { version = "0.4.19" }
 git2 = { version = "0.13.25", default-features = false }
 num-format = { version = "0.4.0" }
 
-framenode-runtime = {path = "../../runtime"}
+framenode-runtime = { path = "../../runtime", default-features = false, features = ["std"] }
