--- a/utils/parse/Cargo.toml
+++ b/utils/parse/Cargo.toml
@@ -16,7 +16,7 @@ codec = { package = "parity-scale-codec", version = "3", default-features = fals
     "chain-error",
 ] }
 scale-info = { version = "2", default-features = false, features = ["derive"] }
-framenode-runtime = { path = "../../runtime" }
+framenode-runtime = { path = "../../runtime", default-features = false, features = ["std"] }
 hex = "0.4.3"
 rustc-hex = "2.1.0"
 
